@@ -4,6 +4,8 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 1.2.26
 =========================
  -- Export "slurm_*" symbols in libpmi.
+ -- Correct number of sockets/cores/threads reported by slurmd (from
+    Par Andersson, National Supercomputer Centre, Sweden).
 
 * Changes in SLURM 1.2.25
 =========================
